--- a/media.html
+++ b/media.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Média do aluno</title>
+    <title>Programa Cálculo de Peso Ideal</title>
 </head>
 <body>
-    <h1>Programa Cálculo do Peso Ideal</h1>
+    <h1>Programa Cálculo de Peso Ideal</h1>
     <form>
-        <input type="numer" id="inNota1" min="0" maxd="10" step="0,1" required>
         <p>Nome: <input type="text" id="inNome" required></p>
-        <p>Sexo: <input type="radio" id="inSexo" min="0" max="10" step="0.1"></p>
-        <p>Altura: <input type="" id="inAltura" min="0" max="10" step="0.1"></p>
-        <input type="Submit" value="Exibir média e situação">
+        <p>Sexo:
+             <input type="radio" id="inMasculino" min="0" step="0.01">Masculino
+             <input type="radio" id="inFeminino" min="0" step="0.01">Feminino
+        </p>
+        <p>Altura <input type="number" id="inAltura" min="0" step="0.01"></p>
+        <input type="Submit" value="Calcular Peso Ideal">
+        <input type="Submit" value="Limpar Campo">
     </form>
     <h3></h3>
     <h4></h4>
