--- a/peso.html
+++ b/peso.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +8,16 @@
 <body>
     <h1>Programa Cálculo de Peso Ideal</h1>
     <form>
-        <p>Nome: <input type="text" id="inNome" required></p>
-        <p>Sexo:
-             <input type="radio" id="inMasculino" min="0" step="0.01">Masculino
-             <input type="radio" id="inFeminino" min="0" step="0.01">Feminino
+        <p>Nome: 
+            <input type="text" id="inNome" required>
         </p>
-        <p>Altura <input type="number" id="inAltura" min="0" step="0.01"></p>
+        <p>Sexo:
+             <input type="radio" name="sexo" id="inMasculino" min="0" step="0.01">Masculino
+             <input type="radio" name="sexo" id="inFeminino" min="0" step="0.01">Feminino
+        </p>
+        <p>Altura:
+             <input type="number" id="inAltura" min="0" step="0.01" required>
+        </p>
         <input type="Submit" value="Calcular Peso Ideal">
         <input type="Submit" value="Limpar Campo">
     </form>
