--- a/pesoideal-main/peso.html
+++ b/pesoideal-main/peso.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programa Cálculo de Peso Ideal</title>
 </head>
 <body>
     <h1>Programa Cálculo de Peso Ideal</h1>
     <form>
-        <p>Nome: <input type="text" id="inNome" required></p>
-        <p>Sexo:
-             <input type="radio" id="inMasculino" min="0" step="0.01">Masculino
-             <input type="radio" id="inFeminino" min="0" step="0.01">Feminino
+        <p>Nome: 
+            <input type="text" id="inNome" required>
         </p>
-        <p>Altura <input type="number" id="inAltura" min="0" step="0.01"></p>
-        <input type="Submit" value="Calcular Peso Ideal">
-        <input type="Submit" value="Limpar Campo">
+        <p>Sexo:
+             <input type="radio" name="sexo" id="inMasculino" required> Masculino
+             <input type="radio" name="sexo" id="inFeminino" required> Feminino
+        </p>
+        <p>Altura:
+             <input type="number" min="0" step="0.01" id="inAltura" required>
+        </p>
+        <input type="submit" value="Calcular Peso Ideal">
+        <input type="reset" value="Limpar Campo">
     </form>
     <h3></h3>
     <h4></h4>
-    <script src="media.js"></script>
-</body>
-</html>
+    <script src="peso.js"></script>
 </body>
 </html>
